package br.ufpb.poo.brasileirao.model;

public enum Position {
    FORWARD,    
    MIDFIELDER, 
    DEFENDER,    
    GOALKEEPER  
}