@startuml BrasileiraoSimplificado

package "br.ufpb.poo.brasileirao.model" {
  class Team {
    - name: String
    - strength: int
    - players: List<Player>
  }
  class Player {
    - name: String
    - strength: int
    - position: Position
  }
  enum Position
  Team "1" *-- "0..*" Player
  Player *-- Position
}

package "br.ufpb.poo.brasileirao.match" {
  class Match {
    - homeTeam: Team
    - awayTeam: Team
    - homeScore: int
    - awayScore: int
    - round: int
  }
  Match --> Team : home/away
}

package "br.ufpb.poo.brasileirao.tournament" {
  class LeagueStandings {
    - teamStatsMap: Map<String, TeamStats>
  }
  class TeamStats {
    - teamName: String
    - points: int
  }
  class TopScorersTable
  LeagueStandings "1" *-- "0..*" TeamStats
}

package "br.ufpb.poo.brasileirao.service" {
  class TournamentManager {
    - teams: List<Team>
    - matches: List<Match>
    - leagueStandings: LeagueStandings
    - topScorers: TopScorersTable
    + addTeams(List<Team>)
    + startTournament()
    + simulateNextRound()
    + getLeagueStandings()
    + getTopScorers()
  }
  TournamentManager o-- LeagueStandings
  TournamentManager o-- TopScorersTable
  TournamentManager o-- "0..*" Team
  TournamentManager o-- "0..*" Match
}

package "br.ufpb.poo.brasileirao.controller" {
  class ChampionshipController
  class MatchesController
  class StatsController
  ChampionshipController ..> TournamentManager
  MatchesController ..> TournamentManager
  StatsController ..> TournamentManager
}

@enduml